Added 'Customer Service CV' text to the .html file.

--- a/CV_WEBPAGE.html
+++ b/CV_WEBPAGE.html
@@ -4,6 +4,55 @@
         <title>Nicolás Javier Jan</title>
     </head>
     <body>
-        <p>My CV will go here.</p>
+        <h1>Nicolás Javier Jan</h1>
+        <h2>Customer Service CV</h2>
+        <h3>Profile</h3>
+        <p>I am a friendly, responsible, helpful person that enjoys learning and facing new challenges. 
+            I consider myself a team player and an easy-going person and I aim to create the best work environment possible.</p>
+        <h3>Personal Information</h3>
+        <ul>
+            <li>Date of Birth: 10/08/1990</li>
+            <li>Nationality: Slovenian/Argentinian.</li>
+            <li>Phone Number: +45 71 36 88 01</li>
+            <li>E-mail: nicolas.javier.jan@gmail.com</li>
+            <li>LinkedIn: linkedin.com/in/nicolasjavierjan/</li>
+        </ul>
+        <h3>Skills</h3>
+        <ul>
+            <li>Microsoft Office</li>
+            <li>Programming skills: Basic knowledge of C,Python, SQL, Java, HTML, CSS and Javascript.</li>
+        </ul>
+        <h4>Languages:</h4>
+        <ul>
+            <li>Spanish - Native</li>
+            <li>English - Business Level</li>
+            <li>French - Begginer </li>
+            <li>Japanese - Begginer</li>
+            <li>Danish - Begginer</li>
+        </ul>
+        <h3>Professional Experience</h3>
+        <h4>Customer Service:</h4>
+        <ul>
+            <li>Gasoline Grill (Landgreven 18, Copenhagen). Trainee. Learning all of the four stations: cooking burgers, assembly, cooking fries and till. Cleaning duties as well as opening and closing of the premises.</li>
+            <li>Hans Christian Andersen Copenhagen (Nyhavn 18, Copenhagen). My duties include closing the premises, cleaning, restocking. I also had register duties (closing of the register and money counting at the end of the day).</li>
+            <li>Haddock's Sea Food (Strandgade 95, Copenhagen). My duties included preparing food, cooking, cleaning and using the register, as well as opening and closing the premises and making sure that everything is up to our standards.</li>
+            <li>Alalma (Home Deco, Coffee Shop & Nursery Garden, Year 2021). My duties included the opening and closing of the shop, customer assistance, taking beverage and food orders from customers and preparing them, and helping customers to harvest fresh vegetables form the orchard as well as general plant care in the nursery garden.</li>
+            <li>Matthew's Churros (Bakery, Year 2019). Manager with two employees under my care. My duties included taking beverage and food orders from customers, preparing them and ensuring product quality; cashier duties and cleaning of the shop.</li>
+        </ul>
+        <h4>Volunteer Work</h4>
+        <ul>
+            <li>Slovenski Dom Carapachay (Slovenian Club, Years 2006 to 2018). Waiter duties during the Club's special events. Painting and cleaning of the premises. Helped in the preparations of numerous events such as "Youth Day" and dances.</li>
+        </ul>
+        <h4>Work as a musician</h4>
+        <ul>
+            <li>Worked in three different orchestras to further improve my skills as a musician. Founding member of two String Quartets. Worked in weddings, events, and played the violin each Wednesday in the famous Buenos Aires restaurant "Rosa Negra" from 2016 to 2019.</li>
+        </ul>
+        <h4>Education</h4>
+        <ul>
+            <li>Kobenhavns Erhvervsakademi: AP in Computer Science. StartedAugust, 2021.</li>
+            <li>Juan José Castro Conservatory (Buenos Aires, Argentina). Music Teacher (Violin). 2014-2021. Unfinished.</li>
+            <li>Juan José Castro Conservatory (Buenos Aires, Argentina). Basic Musical Formation (Violin). 2008 - 2013.</li>
+            <li>Colegio Cardenal Spinola (Buenos Aires, Argentina). High School Diploma (Bachiller en Economía y Gestión de las Organizaciones). Finished 2008.</li>
+        </ul>
     </body>
 </html>
