Added info for Developer CV

--- a/CV_WEBPAGE.html
+++ b/CV_WEBPAGE.html
@@ -5,6 +5,57 @@
     </head>
     <body>
         <h1>Nicolás Javier Jan</h1>
+        <h2>Developer CV</h2>
+        <h3>About Me</h3>
+        <p>I'm a trainee developer seeking a work environment that allows me to practice what I have learned and helps me to continue growing as a developer.
+            I consider myself a responsible, decided, punctual person, with great initiative and ability to work in a team.</p>
+        <h3>Personal Information</h3>
+        <ul>
+            <li>E-mail: nicolas.javier.jan@gmail.com</li>
+            <li>Phone Number: +45 71 36 88 01</li>
+            <li>Date of Birth: 10/08/1990</li>
+            <li>Nationality: Slovenian/Argentinean.</li>
+            <li>Languages: English (Business level), French (Basic),Japanese (Basic) and Spanish (Native).</li>
+        </ul>
+        <h3>Technologies</h3>
+        <ul>
+            <li>C</li>
+            <li>Python</li>
+            <li>Java</li>
+            <li>HTML/CSS</li>
+                <ul>
+                    <li>Django</li>
+                    <li>Flask</li>
+                </ul>
+            <li>Javascript</li>
+            <ul>
+                <li>React</li>
+                <li>React Native</li>
+            </ul>
+            <li>Lua</li>
+                <ul>
+                    <li>Love2D</li>
+                </ul>
+            <li>SQL</li>
+                <ul>
+                    <li>SQLite3</li>
+                    <li>PostgreSQL</li>
+                    <li>MySQL</li>
+                </ul>
+        </ul>
+        <h4>Programming Courses</h4>
+        <ul>
+            <li>CS50: Introduction to Computer Science - HarvardX</li>
+            <li>Object Oriented Programming with Java - University of Helsinki</li>
+            <li>CS50: Web Programming with Python and JS - HarvardX</li>
+            <li>CS50: Mobile App Development with React Native - HarvardX </li>
+            <li>CS50: Introduction to Game Development - HarvardX - Underway</li>
+        </ul>
+        <h4>Formal Studies</h4>
+        <ul>
+            <li>Københavns Erhvervsakademi - AP in Computer Science - Started August 2021</li>
+            <li>Cardenal Spínola School - Bachiller en Economía y Gestión de lasOrganizaciones - Finished</li>
+        </ul>
         <h2>Customer Service CV</h2>
         <h3>Profile</h3>
         <p>I am a friendly, responsible, helpful person that enjoys learning and facing new challenges. 
