Created css file and added media queries for the future

--- a/CV_WEBPAGE.html
+++ b/CV_WEBPAGE.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>Nicolás Javier Jan</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
         <h1>Nicolás Javier Jan</h1>
