Trying to create the header for the web-cv. Using media queries for responsiveness

--- a/CV_WEBPAGE.html
+++ b/CV_WEBPAGE.html
@@ -14,10 +14,17 @@
 
 	<div class="container-fluid">
 		<div class="header">
+			<div class="circle">
 
+			</div>
 		</div>
 	</div>
 
+	<br>
+	<br>
+	<br>
+	<br>
+	
 	<div class="accordion" id="accordion-cv">
 		<div class="accordion-item">
 			<h2 class="accordion-header" id="about-me">
